# coding-notes

./: Flipsky VESC 4.12 Documentation.md  README.md
Digital World Cheat Sheet/: 10.009 Digital World Cheat Sheet.md
Digital World Python Cheat Sheet/: 10.009 Digital World Cheat Sheet.md
Firebase/: Documentation for Firebase.md  retrieve_test.py  upload_test.py
Flipsky VESC 4.12/: Flipsky VESC 4.12 Documentation.md
Git/: 01_Basic_Git.md  02_Git_in-depth.md  03_Git_Advanced.md  git_guide.md
OpenCV-Cpp/examples/: load_image.cpp  load_video_file.cpp
OpenCV-Python/: OpenCV - Python.md
OpenCV-Python/sample_code/: aruco_detector.py  circumcenter_demo.py  contour_centroid_detection.py  draw_bounding_boxes.py  drone_arrow_test.py  hough_circles_demo.py  ip_cam_test.py  morph_transform_demo.py  red_thresholding_demo.py  roi_selection_demo.py  rotate.py  split_four.py  video_cropper.py  webcam_image.py  webcam_video.py
OpenCV-Python/sample_code/picamera_scripts/: pi_camera_single_frame.py  pi_camera_video.py
OpenCV-Python/sample_code/undistort_demo/: camera_undistort_demo.py  checkerboard_calib.py
Pwntools/: pwntools.md
Quanum 3-Axis Mobius Gimbal/: Documentation for Quanum 3-Axis Gimbal.md  runcam2-mountv2.SLDPRT
ROS_SMACH/: SMACH_Reference.md
ROS_SMACH/example_ws/src/executive_smach_visualization/: README.md
ROS_SMACH/example_ws/src/executive_smach_visualization/rqt_smach/: CMakeLists.txt  package.xml
ROS_SMACH/example_ws/src/executive_smach_visualization/rqt_smach/doc/: rqt_smach.md
ROS_SMACH/example_ws/src/executive_smach_visualization/smach_viewer/test/: server.py
ROS_SMACH/example_ws/src/smach_examples/: package.xml
ROS_SMACH/example_ws/src/smach_examples/examples/: concurrence.py  recovery.py  sequence.py  state_machine_nesting.py  user_data.py
ROS_SMACH/example_ws/src/xdot/: package.xml
ros_smach/: SMACH_Reference.md
ros_smach/example_ws/src/smach_examples/examples/: state_machine.py  state_machine_simple_introspection.py
ros_smach/example_ws/src/visualization/rqt_smach/: README.md
ros_smach/example_ws/src/visualization/smach_viewer/: package.xml
(+6 files in other folders)
